No longer use env vars for tests